--- a/src/components/Groceries/GroceriesForm.css
+++ b/src/components/Groceries/GroceriesForm.css
@@ -1,4 +1,4 @@
-.ingredient-form {
+.groceries-form {
   width: 30rem;
   margin: 2rem auto;
   max-width: 80%;
@@ -23,7 +23,7 @@
   border-bottom-color: #ff2058;
 }
 
-.ingredient-form__actions {
+.groceries-form__actions {
   display: flex;
   justify-content: space-between;
   align-items: center;
