--- a/src/components/Groceries/GroceriesForm.css
+++ b/src/components/Groceries/GroceriesForm.css
@@ -4,18 +4,24 @@
   max-width: 80%;
 }
 
-.form-control label,
-.form-control input {
-  display: block;
-  width: 100%;
+.form-control-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.form-control label {
+  flex: 1;
+  padding-right: 10px;
 }
 
 .form-control input {
+  flex: 2;
   font: inherit;
   padding: 0.1rem 0.25rem;
   border: none;
   border-bottom: 2px solid #ccc;
   margin-bottom: 1rem;
+  margin-right: 10px;
 }
 
 .form-control input:focus {
@@ -24,6 +30,7 @@
 }
 
 .groceries-form__actions {
+  flex: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
