--- a/src/components/Groceries/GroceriesList.css
+++ b/src/components/Groceries/GroceriesList.css
@@ -9,13 +9,11 @@
   padding-bottom: 1rem;
 }
 
-.groceries-list ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.groceryItemContainer {
+  width: 100%;
 }
 
-.groceries-list li {
+.groceryItem {
   margin: 1rem 0;
   padding: 0.5rem 1rem;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.26);
