--- a/src/components/Groceries/GroceriesList.css
+++ b/src/components/Groceries/GroceriesList.css
@@ -20,3 +20,12 @@
   display: flex;
   justify-content: space-between;
 }
+
+.removeGroceryItem {
+  cursor: pointer;
+}
+
+.removeItemIcon {
+  width: 20px;
+  height: 20px;
+}
