Style form with flex

--- a/src/components/Groceries/GroceriesForm.css
+++ b/src/components/Groceries/GroceriesForm.css
@@ -6,16 +6,18 @@
 
 .form-control-container {
   display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
   align-items: baseline;
 }
 
 .form-control label {
-  flex: 1;
+  display: inline;
   padding-right: 10px;
 }
 
 .form-control input {
-  flex: 2;
+  display: inline;
   font: inherit;
   padding: 0.1rem 0.25rem;
   border: none;
@@ -30,7 +32,6 @@
 }
 
 .groceries-form__actions {
-  flex: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
